GNOME Bugzilla – Bug 740326
Fix wrong QRECT_TO_GLMATRIX in OpenGLSurfacePainter
Last modified: 2018-05-04 11:51:58 UTC
The QRECT_TO_GLMATRIX in OpenGLSurfacePainter adds 1 to the right and bottom dimensions, which was correct when using QRect rectangles but is wrong for QRectF. This bug can go unnoticed when the QGraphicsScene uses pixel sizes, but can cause large scaling errors when using relative sizes such as a 1.333x1.0 rectangle.
Created attachment 290928 [details] [review] Remove '+1' in right and bottom dimensions of QRECT_TO_GLMATRIX
commit 088acb70e969f8ece8986cf2ab0c2f4ac1379f48 Author: Jeremie Knuesel <jeremie.knusel@sensefly.com> Date: Fri Apr 11 12:03:26 2014 +0200 openglsurfacepainter.cpp: remove '+1' for right and bottom in QRECT_TO_GLMATRIX The '+1' calculation is wrong now that QRectF is used instead of QRect. https://bugzilla.gnome.org/show_bug.cgi?id=740326