openglsurfacepainter.cpp: remove '+1' for right and bottom in QRECT_TO_GLMATRIX

The '+1' calculation is wrong now that QRectF is used instead of QRect.

https://bugzilla.gnome.org/show_bug.cgi?id=740326